# axis

./: .gitignore  AGENTS.md  COMMIT_CONVENTION.md  Cargo.toml  Dockerfile  HEARTBEAT.md  IDENTITY.md  PROGRESS.md  README.md  SOUL.md  TOOLS.md  USER.md  config.example.toml  config.toml  docker-compose.yml
hanlinyuan/axis/: .gitignore  Cargo.toml  LICENSE  PROGRESS.md  README.md
hanlinyuan/axis/docs/: backups_detail_api.md  backups_stats_api.md  backups_update_api.md  containers_create_api.md  containers_detail_api.md  containers_list_api.md  containers_logs_api.md  containers_restart_api.md  dns_config_get_api.md  files_browse_api.md  files_detail_api.md  files_list_api.md  firewall_rules_list_api.md  media_info_api.md  media_photo_upload_api.md  media_photos_detail_api.md  media_video_detail_api.md  network_config_list_api.md  network_config_update_api.md  network_interface_update_api.md  network_interfaces_list_api.md  printers_create_job_api.md  printers_delete_job_api.md  printers_detail_api.md  printers_get_api.md  printers_list_api.md  printers_stats_api.md  printers_update_job_api.md  shared_folder_delete_api.md  shared_folder_list_api.md  shared_folder_permissions_update_api.md  shared_folder_update_api.md  shares_delete_api.md  shares_ftp_create_api.md  shares_ftp_get_api.md  shares_ftp_list_api.md  shares_nfs_delete_api.md  shares_nfs_update_api.md  shares_smb_update_api.md  shares_webdav_update_api.md  (+31 more)
hanlinyuan/axis/src/config/: mod.rs
hanlinyuan/axis/webui/: .env.example  README.md  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+999 files in other folders)
