[package]
name = "axis"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]
postgres = ["r2d2_postgres"]

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
jsonwebtoken = "9"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.11"
log = "0.4"
toml = "0.8"
r2d2 = "0.8"
r2d2_postgres = { version = "0.5", optional = true }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
